Bug 1914874 - Newtab stopping animation happening off screen r=home-newtab-reviewers,maxx
Differential Revision: https://phabricator.services.mozilla.com/D220266

--- a/browser/components/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
+++ b/browser/components/newtab/content-src/components/DiscoveryStreamComponents/DSCard/_DSCard.scss
@@ -19,7 +19,9 @@ $ds-card-image-gradient-solid: rgba(0, 0, 0, 100%);
     border-radius: var(--border-radius-medium);
     position: relative;
     overflow: hidden;
+  }
 
+  &.placeholder-seen {
     &::before {
       content: '';
       display: block;
